src/test/contracts/negative/error_messages/type_ident_eq_lbrace_ident_colon_lpar_ident_type.religo
type foo = { x : (foo type
  